macros/tests/invalid/too_big.rs
use rust_decimal_macros::dec;

fn main() {
    let _ = dec!(79_228_162_514_264_337_593_543_950_336);
}
