macros/tests/invalid/too_big.stderr
error: proc macro panicked
 --> tests/invalid/too_big.rs:4:13
  |
4 |     let _ = dec!(79_228_162_514_264_337_593_543_950_336);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Number exceeds maximum value that can be represented.
